# Cpp-course

./: .clang-format  CMakeLists.txt  conanfile.txt
.github/workflows/: ci.yml
compressor/: CMakeLists.txt
compressor/src/: compressor.cpp
lab_1/: .clang-tidy  CMakeLists.txt
lab_1/libcompressor/include/: libcompressor.hpp
lab_1/libcompressor/src/: libcompressor.cpp
lab_1/libcompressor/tests/: CMakeLists.txt  libcompressortest.cpp
lab_2/: CMakeLists.txt
lab_2/src/: main.cpp  regex.cpp  regex.hpp
lab_2/tests/: tests.cpp
libcompressor/: CMakeLists.txt  Doxyfile.in
libcompressor/src/: libcompressor.cpp
